refactor: feed social notification 경계를 read model 기반으로 정리